增加了调试功能，按住Ctrl+Alrt+P进行Attch 但是          {{ for line in executingCode }}          {{ line }}          {{ end }} 这三行有问题，不会出现，同时，代码中应忽略出现的换行符号等，不然无法编译

--- a/MCPServer.csproj
+++ b/MCPServer.csproj
@@ -15,10 +15,14 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="6.0.0-preview.4.21253.5" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.3.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.8" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="10.0.0-preview.7.25380.108" />
     <PackageReference Include="ModelContextProtocol" Version="0.3.0-preview.3" />
+    <PackageReference Include="OpenTelemetry" Version="1.14.0" />
+    <PackageReference Include="Scriban" Version="6.5.0" />
   </ItemGroup>
 
 </Project>
